--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section class="container">
         <h1>Moin Flensburg!</h1>
         <p>Hier steht etwas Text.</p>
-        <p class="jumbotron">Faszinierend <span class="glyphicon glyphicon-thumbs-up"></span></p>
+        <p class="jumbotron">Nicht Faszinierend <span class="glyphicon glyphicon-thumbs-up"></span></p>
     </section>
     <footer class="container">
         <p>Hier steht etwas Text in der Fußzeile.</p>
